# CAOS_RES_Pulso

./: .gitignore  CHANGELOG.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements-train.txt  requirements.txt
data-pipeline/flowdnalab/: __init__.py  live.py  pipeline.py  registry.py
deploy/: pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md  guides.md  methods.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md  09_frontend-shell.md
docs/cases/: README.md
docs/frameworks/: 00_TEMPLATE.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  03_gpu-lane.md  04_run-the-api.md  05_architecture-modal.md
docs/methods/: 01_clustering-ladder.md  02_representations.md  03_diagnostics.md  04_learned-tier.md  05_attribution-assignment.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json
manuscripts/: .gitignore
scripts/: README.md  gpu_smoke.py  precompute.ps1  precompute.sh  setup.ps1  setup.sh  train-deep.ps1  train-deep.sh
tests/: conftest.py  test_attribution_plus.py  test_clustering_methods.py  test_contract.py  test_contract3.py  test_darts.py  test_descriptors.py  test_dfm.py  test_dfn_mesh.py  test_field.py  test_live.py  test_manifest.py  test_pipeline_smoke.py  test_real_data.py  test_representations.py
(+156 files in other folders)
